--- a/UITrainig/Base.lproj/Main.storyboard
+++ b/UITrainig/Base.lproj/Main.storyboard
@@ -57,6 +57,21 @@
             </objects>
             <point key="canvasLocation" x="76" y="-27"/>
         </scene>
+        <!--Second View Controller-->
+        <scene sceneID="c8E-Vh-n8g">
+            <objects>
+                <viewController id="4Xg-HQ-pcy" customClass="SecondViewController" customModule="UITrainig" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8zu-1h-oeH">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="oOv-Y8-RK5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BI4-oI-MMq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="758" y="-27"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
