--- a/UITrainig/Base.lproj/Main.storyboard
+++ b/UITrainig/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,35 +13,44 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UITrainig" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pWW-lv-j9j">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWW-lv-j9j">
                                 <rect key="frame" x="15" y="214" width="154" height="122"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="znr-pr-Gb7">
-                                        <rect key="frame" x="56" y="51" width="42" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="znr-pr-Gb7">
+                                        <rect key="frame" x="218" y="21" width="42" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="4iF-gW-4zZ"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="lBT-54-2zy"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="154" id="Bgk-Pl-11j"/>
+                                    <constraint firstItem="znr-pr-Gb7" firstAttribute="centerY" secondItem="pWW-lv-j9j" secondAttribute="centerY" id="IbX-gd-WEM"/>
+                                    <constraint firstAttribute="height" constant="122" id="RDH-9u-7cc"/>
+                                    <constraint firstItem="znr-pr-Gb7" firstAttribute="centerX" secondItem="pWW-lv-j9j" secondAttribute="centerX" id="nvl-r1-8w1"/>
+                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PXL-dT-aYE">
-                                <rect key="frame" x="171" y="214" width="189" height="122"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PXL-dT-aYE">
+                                <rect key="frame" x="171" y="214" width="204" height="122"/>
                                 <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lco-iU-7q4">
-                                <rect key="frame" x="15" y="345" width="345" height="434"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lco-iU-7q4">
+                                <rect key="frame" x="15" y="345" width="360" height="466"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awC-7Q-uUx">
-                                        <rect key="frame" x="135" y="199" width="75" height="35"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awC-7Q-uUx">
+                                        <rect key="frame" x="135" y="-1" width="75" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="U4E-l0-Stk"/>
+                                            <constraint firstAttribute="height" constant="35" id="XJp-sl-IWS"/>
+                                        </constraints>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button" buttonSize="medium"/>
@@ -51,10 +60,26 @@
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstItem="awC-7Q-uUx" firstAttribute="centerY" secondItem="lco-iU-7q4" secondAttribute="centerY" id="Apu-sT-mWj"/>
+                                    <constraint firstItem="awC-7Q-uUx" firstAttribute="centerX" secondItem="lco-iU-7q4" secondAttribute="centerX" id="OSM-Ya-RVD"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="PXL-dT-aYE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="167" id="IqP-r5-USh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PXL-dT-aYE" secondAttribute="trailing" constant="15" id="KRf-FB-kFQ"/>
+                            <constraint firstItem="pWW-lv-j9j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="WKJ-v5-oy1"/>
+                            <constraint firstItem="PXL-dT-aYE" firstAttribute="height" secondItem="pWW-lv-j9j" secondAttribute="height" id="Xbg-Zn-XPb"/>
+                            <constraint firstItem="PXL-dT-aYE" firstAttribute="leading" secondItem="pWW-lv-j9j" secondAttribute="trailing" constant="2" id="a5S-lz-zZU"/>
+                            <constraint firstItem="pWW-lv-j9j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="167" id="gYL-Ld-oXi"/>
+                            <constraint firstAttribute="bottom" secondItem="lco-iU-7q4" secondAttribute="bottom" constant="33" id="oED-ym-N35"/>
+                            <constraint firstItem="lco-iU-7q4" firstAttribute="trailing" secondItem="PXL-dT-aYE" secondAttribute="trailing" id="wQa-ZT-c1R"/>
+                            <constraint firstItem="lco-iU-7q4" firstAttribute="leading" secondItem="pWW-lv-j9j" secondAttribute="leading" id="xik-He-ESd"/>
+                            <constraint firstItem="lco-iU-7q4" firstAttribute="top" secondItem="pWW-lv-j9j" secondAttribute="bottom" constant="9" id="yRK-DO-hdn"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -66,7 +91,7 @@
             <objects>
                 <viewController id="4Xg-HQ-pcy" customClass="SecondViewController" customModule="UITrainig" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8zu-1h-oeH">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="755"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NRQ-KX-4wG">
